--- a/topics.ipynb
+++ b/topics.ipynb
@@ -6,7 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Topics to Prepare"
+    "# Topics to Prepare\n",
+    "'''\n",
+    " Q) What is AQE \n",
+    " Q) Dynmic Partition Pruning \n",
+    " Q) Master / Slave Architecutre \n",
+    " Q) Spark Architecure\n",
+    "    - Driver \n",
+    "    - Worker  : Pysical Machine\n",
+    "    - Executer : JVM \n",
+    "\n",
+    " Q)\n",
+    "\n",
+    "'''"
    ]
   },
   {
